# project_sync_service

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
config/: field_mappings.yaml
development/: DEVELOPMENT_JOURNAL.md  PROJECT_SPECIFICATIONS.md
development/reference/: ARCHIVES_DB_AND_FILE_SERVER_REFERENCE.md  FILEMAKER_SYSTEM_REFERENCE.md  FMP.py  RESEARCH_INSIGHTS.md
development/reference/fmp_database_design_report/: 20260402.html
development/reference/fmp_database_design_report/UCPPC_ddr/: UCPPC_n.html
src/project_sync_service/: __init__.py  __main__.py  cli.py  config.py  db.py  fm_adapter.py  mappings.py  preflight.py  utils.py
src/project_sync_service/migrations/: 001_add_contracts_table.sql  002_alter_existing_tables.sql  003_add_sync_business_key_constraints.sql
src/project_sync_service/sync/: __init__.py  base.py  caans.py  contracts.py  project_caans.py  projects.py
